# GLANCE

./: .gitignore  GLANCE_WAYMO_QWEN_SETUP.md  QUICK_START.md  README_SETUP.txt  ReadME.md  SETUP_COMPLETE.md  distill_4b.py  infer.sh  infer_checkpoint200.py  infer_teacher.py  pip_freeze.txt  progress.md  safety_data.py  save_results.py  setup_glance_waymo_qwen.sh  train_teacher.py  train_teacher.sh  verify_setup.py  visualize_results.py  visualize_waymo.py
configs/: accelerate_2gpu.yaml  accelerate_z2.yaml  waymo_finetune_config.yaml  waymo_finetune_qwen32b_trajectory.yaml
edge_vlm_study/: .gitignore  CMakeLists.txt  README.md  package.xml
edge_vlm_study/config/: edge_vlm_config.yaml
edge_vlm_study/include/edge_vlm_study/: DataIngestionNode.hpp  EdgeEvaluator.hpp  SNNRuntimeInterface.hpp  VLMInferenceEngine.hpp
edge_vlm_study/launch/: edge_vlm_launch.py
edge_vlm_study/models/: .gitkeep
edge_vlm_study/offline_distillation/: __init__.py  distill_teachers_to_student.py  export_to_onnx.py
edge_vlm_study/src/: DataIngestionNode.cpp  EdgeEvaluator.cpp  SNNRuntimeInterface.cpp  VLMInferenceEngine.cpp  main.cpp
reasoning_distillation/: README.md  eval_qwen7b_reasoning_student.py  prepare_reasoning_data.py  requirements.txt  train_qwen7b_reasoning_distill.py  train_teacher_qwq32b_qlora.py
reasoning_distillation/scripts/: run_all_reasoning_distillation.sh  run_prepare_data.sh  run_stage1_teacher_qlora.sh  run_stage2_distill_to_qwen25vl7b.sh
running_on_jetson/: CMakeLists.txt  export_gguf.py  infer_jetson.py  package.xml  progress.md
running_on_jetson/src/: cuda_preprocess.cu  cuda_preprocess.cuh  main.cpp  ros2_node.cpp  vlm.cpp  vlm.h
running_on_workstation/: CMakeLists.txt  infer.sh
running_on_workstation/src/: main.cpp  vlm.cpp  vlm.h
scripts/: infer.sh  prepare_waymo_front_camera.py  run_distill.sh  run_dual_distill.sh  run_waymo_qwen32b_trajectory.sh  train_teacher.sh  train_waymo.sh  wait_for_front_extraction_then_train.sh
src/: cf_gen.py  compute_depth.py  data.py  distill_4b.py  distill_dual_teachers.py  infer_checkpoint200.py  infer_distilled_student.py  infer_dual_distilled_checkpoints.py  infer_teacher.py  train_teacher.py  train_waymo.py  trajectory_analysis.py  validate_dual_distill.py  validate_with_visuals.py  verify_waymo_dataset.py  visualize_results.py  vlm_factory.py  waymo_dataset.py
